# strawberry

./: .gitignore  build.nix  flake.nix  service.nix  update-server-sha256.sh
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
client/: default.nix  package.json
client/public/: index.html
client/src/: App.css  App.tsx  Card.tsx  Cards.tsx  DisplayNumberOrLetter.tsx  Fruit.tsx  HintGameRoom.tsx  LinkButton.tsx  LoadingStrawberry.tsx  MainPage.tsx  PlayerNumber.tsx  StartGameRoom.tsx  StartGameRoomSidebar.tsx  StartedGameRoom.tsx  convex.json  gameAPI.tsx  gameActions.tsx  gameHook.tsx  gameLogic.tsx  gameState.tsx  gameTypes.tsx  index.tsx  localStorage.ts  testData.ts  utils.tsx
client/src/convex/: README.md  _generated.ts  createRoom.ts  getRoom.ts  setRoom.ts
server/: Cargo.toml  default.nix
server/examples/: scrape.rs
server/src/: main.rs  words.rs
