[package]
name = "globby"
version = "0.1.0"
authors = ["Geoffry Song <goffrie@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.11", features = ["rt-core", "io-driver", "tcp", "macros", "stream", "parking_lot"] }
futures-intrusive = "0.3.0"
warp = "0.2.1"
parking_lot = "0.10.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.7.3"
