[package]
name = "globby"
version = "0.1.0"
authors = ["Geoffry Song <goffrie@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["rt", "macros", "net", "signal"] }
futures-intrusive = "0.5"
parking_lot = "0.12"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = { version = "1.0.48", features = ["raw_value"] }
rand = "0.8"
anyhow = "1"
axum = "0.7.7"
tower-http = { version = "0.6.1", features = ["fs"] }

[dev-dependencies]
bytes = "1"
hyper = "1"

[profile.release]
lto = true
panic = "abort"
